[package]
name = "button-driver"
version = "0.2.0"
edition = "2021"
authors = ["maxwase", "Max T <max.vvase@gmail.com>"]
description = "Advanced button handling crate"
keywords = ["embedded", "button", "no_std", "esp32", "switch"]
categories = ["embedded"]
license = "MIT"
repository = "https://github.com/maxwase/button-driver"
readme = "README.md"
exclude = [".*"]

[package.metadata.docs.rs]
features = ["std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = { version = "0.43.1", optional = true }
embassy-time = { version = "0.3.0", optional = true }
embedded-hal-old = { package = "embedded-hal", version = "0.2.7", optional = true }
embedded-hal = { version = "1.0.0", optional = true }

[dev-dependencies]
parking_lot = "0.12.2"

[features]
esp = ["dep:esp-idf-hal"]
embassy = ["dep:embassy-time"]
embedded_hal_old = ["dep:embedded-hal-old", "embedded-hal-old/unproven"]
embedded_hal = ["dep:embedded-hal"]
std = []
