[package]
edition = "2021"
name = "stm32f1-ebmassy"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
button-driver = { path = "../../", features = ["embassy", "embedded_hal_old"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
