[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element", "MouseEvent"] }
button-driver = { path = "../../", features = ["wasm"] }
log = "0.4.22"
wasm-logger = "0.2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
